Add frequency calculation

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -82,6 +82,8 @@
 							<input type="hidden" name="lat" value="" />
 							<input type="hidden" name="lon" value="" />
 							<input type="hidden" name="location" value="" />
+							<br/>
+							<h3>Optional info</h3>
 							Observation date: (Year doesn't matter)
 							<input type="date" id="date" name="date" min="2019-01-01" max="2019-12-31"> <br/><br/>
     				      	<input type="text" name="addr" placeholder="Where did you see it?" value="" id="addr" size="10" style="width: 50%; margin: auto; display: inline;" />
