--- a/application/templates/zh-tw/index.html
+++ b/application/templates/zh-tw/index.html
@@ -82,7 +82,8 @@
 							<input type="hidden" name="lat" value="" />
 							<input type="hidden" name="lon" value="" />
 							<input type="hidden" name="location" value="" />
-							下列資訊可留白，但輸入這些資訊可以幫助我們更精確地進行辨識。<br/><br/>
+							<br/><br/>
+							<h4>下列資訊可留白，但輸入這些資訊可以幫助我們更精確地進行辨識。</h4>
 							拍攝日期（年份不重要，我們只用日期來查詢鳥類出現的機率）：
 							<input type="date" id="date" name="date" min="2019-01-01" max="2019-12-31"> <br/><br/>
     				      	<input type="text" name="addr" placeholder="您在哪裡拍攝這張照片的？（請用英文）" value="" id="addr" size="10" style="width: 50%; margin: auto; display: inline;" />
@@ -108,9 +109,9 @@
 						<li><a href="https://www.flickr.com/photos/darren8221/" class="icon fa-flickr" target="_blank"></a></li>
 					</ul>
 					<ul class="copyright">
+						<li>&copy; The Piping Plover</li>
 						<li>版面設計：<a href="http://templated.co" target="_blank">TEMPLATED</a></li>
 						<li>聯絡我們：contact@plover-birdid.com</li>
-						<li>Contact: contact@plover-birdid.com</li>
 					</ul>
 				</div>
 			</footer>
