--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -14,6 +14,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 		<script type="text/javascript" src="{{ url_for('static', filename='scripts/jquery.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='scripts/jquery.imgareaselect.pack.js') }}"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1296992-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-1296992-2');
+        </script>
 	</head>
 	<body class="landing">
 
