--- a/application/templates/results.html
+++ b/application/templates/results.html
@@ -31,6 +31,15 @@
 			}
 
 		</style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1296992-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-1296992-2');
+        </script>
 	</head>
 	<body>
 
