--- a/application/templates/results.html
+++ b/application/templates/results.html
@@ -62,9 +62,11 @@
 			<section id="predictions" class="wrapper style2 special" style="padding: 4em 0em 3em 0em;">
 				<div class="container">
 					<div class="row 150%">
-						<div class="6u 12u$(xsmall)">
+						<div class="6u 12u$(xsmall)" id="userInput">
 								<h2>Your upload</h2>
-								<img id="image" src="{{ url_for('uploaded_file', filename=filename) }}" style="max-width:70%; max-height: 400px;" />
+								
+								<!--<img id="image" src="{{ url_for('uploaded_file', filename=filename) }}" style="max-width:70%; max-height: 300px;" style="display:none;"/>-->
+								<img id="image" src="{{ url_for('uploaded_file', filename=filename) }}" style="display:none;"/>
 
 						
 						</div>
@@ -78,9 +80,9 @@
 								Visual probability: {{Bird.prob}} % 
 									{% if messages.GeoSpatial_Filtering == 1 %}
 										{% if messages.use_freq == 1 %}
-										| Geospatial frequency: {{ "%.1f"|format(Bird.occ / occ_tot * messages.checklists * 100)}} %
+										| Geotemporal frequency: {{ "%.1f"|format(Bird.occ / occ_tot * messages.checklists * 100)}} %
 										{% else %}
-										| Geospatial occurance: {{Bird.occ}} / {{occ_tot}}
+										| Geotemporal occurance: {{Bird.occ}} / {{occ_tot}}
 										{% endif %}
 									{% endif %}
 								<br/>
@@ -88,7 +90,7 @@
 							
 							
 							{% if messages.GeoSpatial_Filtering == 0 %}
-							<br/>Did not perform geospatial filtering because: 
+							<br/>Did not perform geotemporal filtering because: 
 								{% if messages.lat_lon_default == 1 %}
 								Geolocation is not set. 
 								{% endif %}
@@ -96,7 +98,7 @@
 								Date is not set.
 								{% endif %}
 							{% else %}
-								<br/>Performed geospatial filtering: <br/>
+								<br/>Performed geotemporal filtering: <br/>
 								Observation date: {{messages.obs_date}} <br/>
 								Location: {{messages.location}} <br/>
 								Coordinates: ({{messages.lat}}, {{messages.lon}})
@@ -129,7 +131,7 @@
 					{% endfor %}
 					
 					<div align="center" style="margin-top: 1em;">
-						<a href="{{ url_for('index')}}">Go back and try another photo!</a>
+						<a href="{{ url_for('index') }}">Go back and try another photo!</a>
 					</div>
 				</div>
 			</section>
@@ -159,6 +161,34 @@
 			<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
 			<script src="{{ url_for('static', filename='js/util.js') }}"></script>
 			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+			<script type="text/javascript">
+				window.onload = function() {
+				  var canvas = document.createElement('canvas');
+				  var x1 = {{messages.img_x1}};
+				  var x2 = {{messages.img_x2}};
+				  var y1 = {{messages.img_y1}};
+				  var y2 = {{messages.img_y2}};
+				  if ((x2 - x1) > (y2 - y1)) {
+				  	canvas.width = 300;
+				  	canvas.height = 300 / (x2 - x1) * (y2 - y1);
+				  } else {
+				  	canvas.height = 300;
+				  	canvas.width = 300 / (y2 - y1) * (x2 - x1);
+				  }
+				  canvas.style.cssText = 'max-width=70%;';
+				  var ctx = canvas.getContext("2d");
+				  var img = document.getElementById("image");
+				  if ((x2 - x1) > (y2 - y1)) {
+				  	ctx.drawImage(img, 0, 112 - (y2 - y1) / (x2 - x1) * 112, 224, (y2 - y1) / (x2 - x1) * 224, 
+				  					0, 0, 300, (y2 - y1) / (x2 - x1) * 300);
+				  } else {
+				  	ctx.drawImage(img, 112 - (x2 - x1) / (y2 - y1) * 112, 0, (x2 - x1) / (y2 - y1) * 224, 224,
+				  					0, 0, (x2 - x1) / (y2 - y1) * 300, 300);
+				  }
+				  var userInput = document.getElementById("userInput");
+				  userInput.appendChild(canvas); 
+				};
+			</script>
 
 
 	</body>
