--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -76,11 +76,11 @@
 						</header>
 						<p style="color: #777;">(Mobile users, let me know if the drag feature is OK or not, thanks!)</p>
 
-						<input type="file" id="file" name="file" align="center" />
+						<input type="file" id="file" name="file" align="center"/>
                     	<form method=post enctype=multipart/form-data id="bird_info">
                     			
 							<br/>
-							<img id="bird_image" width="60%" align="center" style="margin-top: 0.5em" />
+							<img id="bird_image" align="center" style="margin-top: 0.5em; max-height: 450px; max-width: 60%; /*image-orientation: none;*/" />
 							<br/>
 							<input type="hidden" id="x1" name="x1" value="" />
 							<input type="hidden" id="y1" name="y1" value="" />
@@ -100,8 +100,8 @@
 				      		<div id="results"></div>
 				      		<div id="selected_addr"></div>
 							<br/>
-							<input class="button special big" id="Upload" value=Submit onclick="crop_resize()">
-				      		<!--<input class="button special big" id="Upload" type=submit value=Upload onsubmit="crop_resize()">-->
+							<input class="button special big" id="Upload" value=Submit onclick="crop_resize()" readonly>
+				      		<!--<input class="button special big" id="Diagnosis" value=Diagnosis onclick="crop_resize2()" readonly>-->
 				      		<input type="hidden" id="croppedImg" name="croppedImg" value=""/>
                      </form>
                          	
@@ -133,13 +133,58 @@
 			<script src="{{ url_for('static', filename='js/util.js') }}"></script>
 			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 			<script type="text/javascript">
-				document.getElementById("file").onchange = function () {
+				
+				document.getElementById("file").onchange = function (e2) {
 					var reader = new FileReader();
+					var ori = 1;
+					function resetOrientation(srcBase64, srcOrientation, callback) {
+						var img = new Image();	
+						img.onload = function() {
+							var width = img.naturalWidth,
+								height = img.naturalHeight,
+								canvas = document.createElement('canvas'),
+								ctx = canvas.getContext("2d");
+							console.log(width, height);
+							// if (width > height && width > 2048) {
+							// 	canvas.width = 2048;
+							// 	canvas.height = 2048/width*height;
+							// } else if (height > width && height > 2048) {
+							// 	canvas.width = 2048/height*width;
+							// 	canvas.height = 2048;
+							// } else {
+								canvas.width = width;
+								canvas.height = height;
+							// }
+
+							// draw image
+							ctx.drawImage(img, 0, 0, width, height, 0, 0, canvas.width, canvas.height);
+
+							// export base64
+							callback(canvas.toDataURL());
+						};
+
+						img.src = srcBase64;
+					}
+
+					var file = e2.target.files[0];
+					getOrientation(file, function(orientation) {
+					   		ori = orientation;
+						});
+					console.log(ori);
 
 					reader.onload = function (e) {
 						// get loaded data and render thumbnail.
 						var myImg = document.getElementById("bird_image");
-						myImg.src = e.target.result;
+						if (ori < 2) {
+							console.log("Ori is " + ori);
+							myImg.src = e.target.result;
+						} else {
+							console.log("Ori is " + ori);
+							resetOrientation(e.target.result, ori, function(resetBase64Image) {
+								myImg.src = resetBase64Image;
+							});
+						}
+						//myImg.src = e.target.result;
 						myImg.onload = function() {
 						//document.getElementById("bird_image").src = e.target.result;
 							var myImg = document.getElementById("bird_image");
@@ -153,9 +198,9 @@
 						};
 					};
 
-					// read the image file as a data URL.
 					reader.readAsDataURL(this.files[0]);
 				};
+
 				$(function () {
 					$('#bird_image').imgAreaSelect({ 
 						//aspectRatio: '1:1', 
@@ -254,7 +299,46 @@
 				}
 
 			</script>
+			
+			<script type="text/javascript">
+				function getOrientation(file, callback) {
+				  var reader = new FileReader();
 
+				  reader.onload = function(event) {
+				    var view = new DataView(event.target.result);
+
+				    if (view.getUint16(0, false) != 0xFFD8) return callback(-2);
+
+				    var length = view.byteLength,
+				        offset = 2;
+
+				    while (offset < length) {
+				      var marker = view.getUint16(offset, false);
+				      offset += 2;
+
+				      if (marker == 0xFFE1) {
+				        if (view.getUint32(offset += 2, false) != 0x45786966) {
+				          return callback(-1);
+				        }
+				        var little = view.getUint16(offset += 6, false) == 0x4949;
+				        offset += view.getUint32(offset + 4, little);
+				        var tags = view.getUint16(offset, little);
+				        offset += 2;
+
+				        for (var i = 0; i < tags; i++)
+				          if (view.getUint16(offset + (i * 12), little) == 0x0112)
+				            return callback(view.getUint16(offset + (i * 12) + 8, little));
+				      }
+				      else if ((marker & 0xFF00) != 0xFF00) break;
+				      else offset += view.getUint16(offset, false);
+				    }
+				    return callback(-1);
+				  };
+
+				  reader.readAsArrayBuffer(file.slice(0, 64 * 1024));
+				};
+
+			</script>
 			<script>
 				// Thanks to this https://derickrethans.nl/leaflet-and-nominatim.html
 				function addr_search() {
